# django-opengraph

./: .gitignore  AUTHORS  MANIFEST.in  README.markdown  setup.cfg
example/example/: settings.py  urls.py
example/templates/: base.html
opengraph/: __init__.py  object_translator.py
opengraph/templates/opengraph/: base.html
opengraph/templatetags/: opengraph_tags.py
